IinkedIn link Update

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
                 </ul>
                 <div id="social_Icon"
                     class="hidden sm:flex flex-row gap-3  px-3 py-3 border-b border-t rounded-e-xl rounded-l-xl border-green-500">
-                    <a href="" class="bg-green-400 hover:bg-green-500 text-white rounded-md px-2 py- text-2xl">
+                    <a href="https://www.linkedin.com/in/samim-reza99/" target="_blank" class="bg-green-400 hover:bg-green-500 text-white rounded-md px-2 py- text-2xl">
                         <i class="fa-brands fa-linkedin"></i></a>
                     <a href="" class="bg-green-400 hover:bg-green-500 text-white rounded-md px-2 py- text-2xl">
                         <i class="fa-brands fa-facebook"></i></a>
