--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,8 @@
                             <button type="submit" class="bg-yellow-500 shadow shadow-white px-6 
                         py-2 font-medium rounded-md hover:bg-yellow-600 hover:text-white transition-all"> About
                             </button></a></li>
-                    <li><a href="https://github.com/muhammadsamimreza" target="_blank" class="text-black hover:text-white">
+                    <li><a href="https://github.com/muhammadsamimreza" target="_blank"
+                            class="text-black hover:text-white">
                             <button type="submit" class="bg-yellow-500 shadow shadow-white px-6 
                         py-2 font-medium rounded-md hover:bg-yellow-600 hover:text-white transition-all"> Portfolio
                             </button></a></li>
@@ -46,7 +47,8 @@
                 </ul>
                 <div id="social_Icon"
                     class="hidden sm:flex flex-row gap-3  px-3 py-3 border-b border-t rounded-e-xl rounded-l-xl border-green-500">
-                    <a href="https://www.linkedin.com/in/samim-reza99/" target="_blank" class="bg-green-400 hover:bg-green-500 text-white rounded-md px-2 py- text-2xl">
+                    <a href="https://www.linkedin.com/in/samim-reza99/" target="_blank"
+                        class="bg-green-400 hover:bg-green-500 text-white rounded-md px-2 py- text-2xl">
                         <i class="fa-brands fa-linkedin"></i></a>
                     <a href="" class="bg-green-400 hover:bg-green-500 text-white rounded-md px-2 py- text-2xl">
                         <i class="fa-brands fa-facebook"></i></a>
@@ -76,9 +78,10 @@
                         <span class="text-yellow-500 font-medium">JavaScript.</span>
                     </h2>
                     <div class="text-xl ">
-                        <button type="submit" class="bg-yellow-500 shadow shadow-white px-6 
+                        <a href="./about.html" target="_blank"><button type="submit" class="bg-yellow-500 shadow shadow-white px-6 
                         py-2 font-medium rounded-md hover:bg-yellow-600 hover:text-white transition-all"> About me
-                        </button>
+                            </button></a>
+
                     </div>
 
 
@@ -111,7 +114,7 @@
 
 
 
-       
+
 
     </section>
 
