--- a/src/about.html
+++ b/src/about.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../assets/fontawesome/css/all.min.css">
 </head>
 
-<body>
+<body class="bg-gray-700">
     <section id="hero" class="sm:w-full min-h-screen bg-gray-700  space-y-10 sm:space-y-5">
         <!-- Navigation bar -->
         <div id="navbar" class="space-y-10 sm:space-y-24 bg-gray-800 pb-6">
@@ -108,14 +108,34 @@
 
             </div>
 
-
         </div>
 
+    </section>
 
+    <section class="w-full min-h-screen text-white text-xl">
+        <div id="details" class="container mx-auto px-40 flex ">
+            <div class="flex flex-row gap-20">
+                <div id="background" class="w-1/2 space-y-5">
+                    <h1 class="text-3xl font-bold">Background</h1>
+                    <h1> I recently completed my training in Web Design & Development at
+                        the Rajshahi City Corporation Employment Skill Development Institute.</h1>
+                </div>
+                <div id="Skills" class="space-y-5">
+                    <h1 class="text-3xl font-bold">Skills</h1>
+                    <ul class="">
+                        <li><i class="fa-solid fa-circle text-xs pr-3"></i>Visual Studio Code</li>
+                        <li><i class="fa-solid fa-circle text-xs pr-3"></i>GitHub</li>
+                        <li><i class="fa-solid fa-circle text-xs pr-3"></i>Google Workspace</li>
+                        <li><i class="fa-solid fa-circle text-xs pr-3"></i>Figma</li>
+                        <li><i class="fa-solid fa-circle text-xs pr-3"></i>Slack</li>
+                        <li><i class="fa-solid fa-circle text-xs pr-3"></i>Trello</li>
+                    </ul>
+                </div>
+            </div>
+            <div>
 
-
-
-
+            </div>
+        </div>
     </section>
 
 
