--- a/src/about.html
+++ b/src/about.html
@@ -19,7 +19,7 @@
                 <div class="sm:container sm:mx-auto sm:flex sm:justify-between sm:items-center px-10 bg-gray-800">
                     <div id="logo"
                         class="flex justify-center items-center p-1 border-b border-t rounded-e-xl rounded-l-xl border-green-500">
-                        <a href=""
+                        <a href="./index.html"
                             class="flex flex-row gap-3 justify-center text-green-400 font-extrabold rounded-md px-2 py-1 text-2xl">
                             <span class="flex flex-row gap-1 ">
                                 <span><i class="fa-brands fa-staylinked"></i></span>
@@ -28,7 +28,7 @@
                     </div>
                     <ul
                         class="hidden sm:flex space-x-10 items-center px-3 py-2 border-b border-t rounded-e-xl rounded-l-xl border-green-500">
-                        <li><a href="#" class="text-black hover:text-white">
+                        <li><a href="./index.html" class="text-black hover:text-white">
                                 <button type="submit" class="bg-yellow-500 shadow shadow-white px-6 
                             py-2 font-medium rounded-md hover:bg-yellow-600 hover:text-white transition-all"> Home
                                 </button></a></li>
