--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
                             <button type="submit" class="bg-yellow-500 shadow shadow-white px-6 
                         py-2 font-medium rounded-md hover:bg-yellow-600 hover:text-white transition-all"> Home
                             </button></a></li>
-                    <li><a href="#" class="text-black hover:text-white">
+                    <li><a href="./about.html" class="text-black hover:text-white">
                             <button type="submit" class="bg-yellow-500 shadow shadow-white px-6 
                         py-2 font-medium rounded-md hover:bg-yellow-600 hover:text-white transition-all"> About
                             </button></a></li>
