--- a/src/about.html
+++ b/src/about.html
@@ -62,7 +62,7 @@
 
             <div class="container mx-auto px-20">
                 <h1
-                    class="text-2xl sm:text-4xl text-gray-300 font-semibold border-b pb-2 border-green-500 rounded-r-xl rounded-l-xl px-2 py-4">
+                    class="text-2xl sm:text-4xl text-center sm:text-left text-gray-300 font-semibold border-b pb-2 border-green-500 rounded-r-xl rounded-l-xl px-2 py-4">
                     About Me</h1>
             </div>
         </div>
@@ -98,7 +98,7 @@
 
 
                 <div id="social_Icon"
-                    class="sm:hidden w-full justify-center mt-10  flex flex-row gap-3  px-3 py-3 mb-5 border-b border-t rounded-e-xl rounded-l-xl border-green-500">
+                    class="hidden w-full justify-center mt-10  flex flex-row gap-3  px-3 py-3 mb-5 border-b border-t rounded-e-xl rounded-l-xl border-green-500">
                     <a href="" class="bg-green-400 hover:bg-green-500 text-white rounded-md px-2 py- text-2xl">
                         <i class="fa-brands fa-linkedin"></i></a>
                     <a href="" class="bg-green-400 hover:bg-green-500 text-white rounded-md px-2 py- text-2xl">
@@ -121,10 +121,10 @@
 
     </section>
 
-    <section class="w-full text-white text-xl pt-16 pb-20">
-        <div id="details" class="container mx-auto px-40 space-y-20">
-            <div class="flex flex-row gap-20">
-                <div id="Skills" class="space-y-5 w-1/2">
+    <section class="w-full text-white text-xl pt-16 sm:pb-20 pb-10 px-2 sm:px-0">
+        <div id="details" class="container mx-auto sm:px-40 space-y-20">
+            <div class="sm:flex flex-row gap-20">
+                <div id="Skills" class="space-y-5 sm:w-1/2">
                     <h1
                         class="text-yellow-500 text-2xl sm:text-3xl font-bold border-b pb-2 border-green-500 rounded-r-xl rounded-l-xl px-2 py-4">
                         Skills</h1>
@@ -145,7 +145,7 @@
                         </div>
                     </ul>
                 </div>
-                <div id="background" class="w-1/2 space-y-5 ">
+                <div id="background" class="sm:w-1/2 space-y-5 pt-10 sm:pt-0">
                     <h1
                         class="text-yellow-500 text-2xl sm:text-3xl font-bold border-b pb-2 border-green-500 rounded-r-xl rounded-l-xl px-2 py-4">
                         Background</h1>
@@ -162,10 +162,10 @@
         </div>
     </section>
 
-    <section class="w-full text-white text-xl pb-20">
-        <div id="details" class="container mx-auto px-40 space-y-20">
-            <div class="flex flex-row gap-20">
-                <div id="Skills" class="space-y-5 w-1/2">
+    <section class="w-full text-white text-xl sm:pb-20">
+        <div id="details" class="container mx-auto sm:px-40 space-y-20 px-2">
+            <div class="sm:flex flex-row gap-20">
+                <div id="Skills" class="space-y-5 sm:w-1/2">
                     <h1
                         class="text-yellow-500 text-2xl sm:text-3xl font-bold border-b pb-2 border-green-500 rounded-r-xl rounded-l-xl px-2 py-4">
                         Remarkable Projects</h1>
@@ -191,9 +191,9 @@
 
                     </ul>
                 </div>
-                <div id="background" class="w-1/2 space-y-5 ">
+                <div id="background" class="sm:w-1/2 space-y-5 pt-10 sm:pt-0">
                     <h1
-                        class="text-yellow-500 text-2xl sm:text-3xl font-bold border-b pb-2 border-green-500 rounded-r-xl rounded-l-xl px-2 py-4">
+                        class="text-yellow-500 text-2xl sm:text-3xl font-bold border-b sm:pb-2 border-green-500 rounded-r-xl rounded-l-xl px-2 py-4">
                         Personal Skills</h1>
                     <ul class="space-y-1">
                         <li class="flex "><i class="fa-solid fa-circle text-xs pr-3 mt-2"></i>Excellent in Communication
@@ -215,9 +215,9 @@
     </section>
 
 
-    <section class="w-full text-white text-xl pb-20">
-        <div id="details" class="container mx-auto px-40 space-y-20">
-            <div class="flex flex-row gap-20">
+    <section class="w-full text-white text-xl sm:pb-20 pt-10 sm:pt-0 px-2 sm:px-0">
+        <div id="details" class="container mx-auto sm:px-40 space-y-20">
+            <div class="sm:flex flex-row gap-20">
                 <div id="Skills" class="space-y-5 w-1/2">
                     <h1
                         class="text-yellow-500 text-2xl sm:text-3xl font-bold border-b pb-2 border-green-500 rounded-r-xl rounded-l-xl px-2 py-4">
@@ -235,7 +235,7 @@
 
                     </ul>
                 </div>
-                <div id="background" class="w-1/2 space-y-5 ">
+                <div id="background" class="w-1/2 space-y-5 pt-10 sm:pt-0">
                     <h1
                         class="text-yellow-500 text-2xl sm:text-3xl font-bold border-b pb-2 border-green-500 rounded-r-xl rounded-l-xl px-2 py-4">
                         Hobbies</h1>
@@ -255,10 +255,10 @@
         </div>
     </section>
 
-    <section id="footer" class="pb-16">
-        <footer class="container mx-auto px-5 flex items-center justify-between border-b border-t rounded-e-xl rounded-l-xl border-green-500">
+    <section id="footer" class="sm:pb-16 pb-10 px-2 sm:px-0 pt-16 sm:pt-0">
+        <footer class="container mx-auto px-5 flex flex-col sm:flex-row items-center justify-between border-b border-t rounded-e-xl rounded-l-xl border-green-500">
 
-            <div>
+            <div class="hidden sm:block">
                 <a href="#" class="text-black hover:text-white">
                         <button type="submit" class="bg-yellow-500 shadow shadow-white px-6 
                             py-2 font-medium rounded-md hover:bg-yellow-600 hover:text-white transition-all"> 
@@ -266,18 +266,18 @@
             </div>
     
             <div
-                class="text-xl text-gray-400">
+                class="sm:text-xl text-gray-400">
                 <span><i class="fa-regular fa-copyright"></i></span> <span>2024 - Present samim reza. All rights
                     reserved.</span>
             </div>
             <div>
-                <div id="social_Icon" class="hidden sm:flex flex-row gap-3  px-3 py-3 ">
+                <div id="social_Icon" class="flex flex-row gap-3  px-3 py-3 ">
                     <a href="https://www.linkedin.com/in/samim-reza99/" target="_blank"
-                        class="bg-yellow-500 hover:bg-green-500 text-white rounded-md px-2 py- text-2xl">
+                        class="bg-yellow-500 hover:bg-green-500 text-white rounded-md px-2 text-base sm:text-2xl">
                         <i class="fa-brands fa-linkedin"></i></a>
-                    <a href="" class="bg-yellow-500 hover:bg-green-500 text-white rounded-md px-2 py- text-2xl">
+                    <a href="" class="bg-yellow-500 hover:bg-green-500 text-white rounded-md px-2 text-base sm:text-2xl">
                         <i class="fa-brands fa-facebook"></i></a>
-                    <a href="" class="bg-yellow-500 hover:bg-green-500 text-white rounded-md px-2 py- text-2xl">
+                    <a href="" class="bg-yellow-500 hover:bg-green-500 text-white rounded-md px-2 text-base sm:text-2xl">
                         <i class="fa-brands fa-instagram"></i></a>
     
                 </div>
