--- a/src/about.html
+++ b/src/about.html
@@ -98,7 +98,7 @@
 
 
                 <div id="social_Icon"
-                    class="hidden w-full justify-center mt-10  flex flex-row gap-3  px-3 py-3 mb-5 border-b border-t rounded-e-xl rounded-l-xl border-green-500">
+                    class="hidden w-full justify-center mt-10  flex-row gap-3  px-3 py-3 mb-5 border-b border-t rounded-e-xl rounded-l-xl border-green-500">
                     <a href="" class="bg-green-400 hover:bg-green-500 text-white rounded-md px-2 py- text-2xl">
                         <i class="fa-brands fa-linkedin"></i></a>
                     <a href="" class="bg-green-400 hover:bg-green-500 text-white rounded-md px-2 py- text-2xl">
