--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
             <div id="details"
                 class="text-center sm:text-left flex flex-col justify-center items-center sm:items-start order-2 sm:order-1">
                 <div id="My_info" class="w-[82%] space-y-7 ">
-                    <h1 class="text-white text-4xl sm:text-8xl font-bold"><span
+                    <h1 class="text-white text-4xl lg:text-6xl xl:text-8xl font-bold"><span
                             class="text-white sm:text-6xl sm:text-yellow-500">Hello, I'm </span>
                         <br>
                         <span class="text-green-600">Muhammad <br> Samim
@@ -102,7 +102,7 @@
             </div>
             <div id="Photo" class="flex justify-center items-center mb-10 sm:mb-0 sm:order-1">
                 <div id="image"
-                    class="sm:w-[550px] sm:h-[550px] w-80 h-80 relative rounded-full overflow-hidden border-4 border-yellow-500 ">
+                    class="lg:w-[350px] lg:h-[350px] xl:w-[550px] xl:h-[550px] w-80 h-80 relative rounded-full overflow-hidden border-4 border-yellow-500 ">
                     <img class="absolute" src="../images/samim_coverjpg.jpg" alt="Photo">
                 </div>
 
