--- a/src/index.html
+++ b/src/index.html
@@ -57,9 +57,11 @@
 
                 </div>
 
-                <div id="menu" onclick="showMenu()" class="lg:hidden bg-green-500 hover:bg-green-600 px-2 py-1 rounded-md shadow-md shadow-white">
+                <div id="menu" onclick="showMenu()"
+                    class="lg:hidden bg-green-500 hover:bg-green-600 px-2 py-1 rounded-md shadow-md shadow-white">
                     <span id="navMenuButtonOn"><i class="fa-solid fa-bars text-3xl text-white"></i></span>
-                    <span class="hidden" id="navMenuButtonOff"><i class="fa-solid fa-xmark text-3xl text-white "></i></span>
+                    <span class="hidden" id="navMenuButtonOff"><i
+                            class="fa-solid fa-xmark text-3xl text-white "></i></span>
                 </div>
             </div>
         </nav>
@@ -94,7 +96,7 @@
 
 
                 <div id="social_Icon"
-                    class="sm:hidden w-full justify-center mt-16  flex flex-row gap-3  px-3 py-3 border-b border-t rounded-e-xl rounded-l-xl border-green-500">
+                    class="sm:hidden w-full justify-center mt-16 mb-10  flex flex-row gap-3  px-3 py-3 border-b border-t rounded-e-xl rounded-l-xl border-green-500">
                     <a href="" class="bg-green-400 hover:bg-green-500 text-white rounded-md px-2 py- text-2xl">
                         <i class="fa-brands fa-linkedin"></i></a>
                     <a href="" class="bg-green-400 hover:bg-green-500 text-white rounded-md px-2 py- text-2xl">
@@ -112,20 +114,12 @@
                 </div>
 
             </div>
-
-
         </div>
-
-
-
-
-
-
     </section>
 
 
 
-<script src="./main.js"></script>
+    <script src="./main.js"></script>
 </body>
 
 </html>
