--- a/src/about.html
+++ b/src/about.html
@@ -15,39 +15,39 @@
     <section id="hero" class="sm:w-full bg-gray-700  space-y-10 sm:space-y-5">
         <!-- Navigation bar -->
         <div id="navbar" class="space-y-10 sm:space-y-20 bg-gray-800 pb-6">
-            <nav class="sm:w-full w-72 flex justify-center items-center mx-auto bg-gray-800 py-4 ">
-                <div class="sm:container sm:mx-auto sm:flex sm:justify-between sm:items-center bg-gray-800">
+            <nav class="w-full flex justify-center items-center mx-auto bg-gray-800 py-4 ">
+                <div class="container mx-auto flex justify-between items-center px-10 bg-gray-800">
                     <div id="logo"
                         class="flex justify-center items-center p-1 border-b border-t rounded-e-xl rounded-l-xl border-green-500">
-                        <a href="./index.html"
+                        <a href=""
                             class="flex flex-row gap-3 justify-center text-green-400 font-extrabold rounded-md px-2 py-1 text-2xl">
                             <span class="flex flex-row gap-1 ">
                                 <span><i class="fa-brands fa-staylinked"></i></span>
                                 <span><i class="fa-regular fa-registered"></i></span>
                             </span><span>SAMIM</span></a>
                     </div>
-                    <ul
-                        class="hidden sm:flex space-x-10 items-center px-3 py-2 border-b border-t rounded-e-xl rounded-l-xl border-green-500">
-                        <li><a href="./index.html" class="text-black hover:text-white">
-                                <button type="submit" class="bg-yellow-500 shadow shadow-white px-6 
+                    <ul id="navContent"
+                        class="hidden space-y-5 lg:space-y-0 xl:space-x-10  lg:flex lg:space-x-3 items-center px-3 py-2 border-b border-t rounded-e-xl rounded-l-xl border-green-500">
+                        <li><a href="#" class="text-black hover:text-white">
+                                <button type="submit" class="bg-yellow-500 shadow shadow-white lg:px-6 px-8
                             py-2 font-medium rounded-md hover:bg-yellow-600 hover:text-white transition-all"> Home
                                 </button></a></li>
-                        <li><a href="#" class="text-black hover:text-white">
-                                <button type="submit" class="bg-yellow-500 shadow shadow-white px-6 
+                        <li><a href="./about.html" class="text-black hover:text-white">
+                                <button type="submit" class="bg-yellow-500 shadow shadow-white lg:px-6 px-8
                             py-2 font-medium rounded-md hover:bg-yellow-600 hover:text-white transition-all"> About
                                 </button></a></li>
                         <li><a href="https://github.com/muhammadsamimreza" target="_blank"
                                 class="text-black hover:text-white">
-                                <button type="submit" class="bg-yellow-500 shadow shadow-white px-6 
+                                <button type="submit" class="bg-yellow-500 shadow shadow-white lg:px-6 px-6
                             py-2 font-medium rounded-md hover:bg-yellow-600 hover:text-white transition-all"> Portfolio
                                 </button></a></li>
                         <li><a href="#" class="text-black hover:text-white">
-                                <button type="submit" class="bg-yellow-500 shadow shadow-white px-6 
+                                <button type="submit" class="bg-yellow-500 shadow shadow-white lg:px-6 px-7
                             py-2 font-medium rounded-md hover:bg-yellow-600 hover:text-white transition-all"> Contact
                                 </button></a></li>
                     </ul>
                     <div id="social_Icon"
-                        class="hidden sm:flex flex-row gap-3  px-3 py-3 border-b border-t rounded-e-xl rounded-l-xl border-green-500">
+                        class="hidden lg:flex flex-row md:gap-3  px-3 py-3 border-b border-t rounded-e-xl rounded-l-xl border-green-500">
                         <a href="https://www.linkedin.com/in/samim-reza99/" target="_blank"
                             class="bg-green-400 hover:bg-green-500 text-white rounded-md px-2 py- text-2xl">
                             <i class="fa-brands fa-linkedin"></i></a>
@@ -55,7 +55,14 @@
                             <i class="fa-brands fa-facebook"></i></a>
                         <a href="" class="bg-green-400 hover:bg-green-500 text-white rounded-md px-2 py- text-2xl">
                             <i class="fa-brands fa-instagram"></i></a>
-
+    
+                    </div>
+    
+                    <div id="menu" onclick="showMenu()"
+                        class="lg:hidden bg-green-500 hover:bg-green-600 px-2 py-1 rounded-md shadow-md shadow-white">
+                        <span id="navMenuButtonOn"><i class="fa-solid fa-bars text-3xl text-white"></i></span>
+                        <span class="hidden" id="navMenuButtonOff"><i
+                                class="fa-solid fa-xmark text-3xl text-white "></i></span>
                     </div>
                 </div>
             </nav>
