--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <body>
     <section id="hero" class="sm:w-full min-h-screen bg-gray-800 sm:grid sm:relative space-y-10 sm:space-y-0">
         <!-- Navigation bar -->
-        <nav class="w-full w-72 flex justify-center items-center mx-auto bg-gray-800 py-4 sm:absolute ">
+        <nav class="w-full flex justify-center items-center mx-auto bg-gray-800 py-4 sm:absolute ">
             <div class="container mx-auto flex justify-between items-center px-10 bg-gray-800">
                 <div id="logo"
                     class="flex justify-center items-center p-1 border-b border-t rounded-e-xl rounded-l-xl border-green-500">
