--- a/src/about.html
+++ b/src/about.html
@@ -19,7 +19,7 @@
                 <div class="container mx-auto flex justify-between items-center px-10 bg-gray-800">
                     <div id="logo"
                         class="flex justify-center items-center p-1 border-b border-t rounded-e-xl rounded-l-xl border-green-500">
-                        <a href=""
+                        <a href="./index.html"
                             class="flex flex-row gap-3 justify-center text-green-400 font-extrabold rounded-md px-2 py-1 text-2xl">
                             <span class="flex flex-row gap-1 ">
                                 <span><i class="fa-brands fa-staylinked"></i></span>
@@ -28,7 +28,7 @@
                     </div>
                     <ul id="navContent"
                         class="hidden space-y-5 lg:space-y-0 xl:space-x-10  lg:flex lg:space-x-3 items-center px-3 py-2 border-b border-t rounded-e-xl rounded-l-xl border-green-500">
-                        <li><a href="#" class="text-black hover:text-white">
+                        <li><a href="./index.html" class="text-black hover:text-white">
                                 <button type="submit" class="bg-yellow-500 shadow shadow-white lg:px-6 px-8
                             py-2 font-medium rounded-md hover:bg-yellow-600 hover:text-white transition-all"> Home
                                 </button></a></li>
@@ -232,7 +232,7 @@
                     <ul class="flex flex-row gap-20">
                         <div class="space-y-1">
                             <li class="flex "><i class="fa-solid fa-circle text-xs pr-3 mt-2"></i>
-                                <div>Bangli (Native)</div>
+                                <div>Bengali (Native)</div>
                             </li>
                             <li class="flex "><i class="fa-solid fa-circle text-xs pr-3 mt-2"></i>
                                 <div>English ( Fluent )</div>
