--- a/src/about.html
+++ b/src/about.html
@@ -15,9 +15,9 @@
     <section id="hero" class="sm:w-full bg-gray-700  space-y-10 sm:space-y-5
     relative">
         <!-- Navigation bar -->
-        <div id="navbar" class="space-y-10 sm:space-y-20 bg-gray-800 pb-6">
+        <div id="navbar" class="space-y-10 sm:space-y-20 bg-gray-800 pb-6 px-5">
             <nav class="w-full flex justify-center items-center mx-auto bg-gray-800 py-4 ">
-                <div class="container mx-auto flex justify-between items-center px-10 bg-gray-800">
+                <div class="container mx-auto flex justify-between items-center xl:px-10 bg-gray-800">
                     <div id="logo"
                         class="flex justify-center items-center p-1 border-b border-t rounded-e-xl rounded-l-xl border-green-500">
                         <a href="./index.html"
@@ -29,7 +29,7 @@
                     </div>
                     <div id="NavSection" class="">
                         <ul id="navContent"
-                            class="hidden space-y-5 lg:space-y-0 xl:space-x-10  lg:flex lg:space-x-3 items-center  py-2 border-b border-t lg:rounded-e-xl lg:rounded-l-xl border-green-500
+                            class="hidden space-y-5 lg:space-y-0 xl:space-x-10  lg:flex lg:space-x-3 items-center px-3 py-2 border-b border-t lg:rounded-e-xl lg:rounded-l-xl border-green-500
                            ">
                             <li><a href="./index.html" class="text-black hover:text-white">
                                     <button type="submit" class="bg-yellow-500 shadow shadow-white lg:px-6 px-8
@@ -71,9 +71,9 @@
                 </div>
             </nav>
 
-            <div class="container mx-auto px-20">
+            <div class="container mx-auto xl:px-20">
                 <h1
-                    class="text-2xl sm:text-4xl text-center sm:text-left text-gray-300 font-semibold border-b pb-2 border-green-500 rounded-r-xl rounded-l-xl px-2 py-4">
+                    class="text-2xl sm:text-4xl text-center md:text-left text-gray-300 font-semibold border-b pb-2 border-green-500 rounded-r-xl rounded-l-xl px-2 py-4">
                     About Me</h1>
             </div>
         </div>
@@ -83,16 +83,16 @@
 
 
 
-        <div id="About" class="container mx-auto grid sm:flex sm:justify-between sm:items-center sm:px-40">
+        <div id="About" class="container mx-auto grid md:flex md:justify-between md:items-center px-5 lg:px-10 xl:px-32">
             <div id="details"
-                class="text-center sm:text-left flex flex-col justify-center items-center sm:items-start order-2 sm:order-1">
-                <div id="My_info" class="w-2/3 space-y-5 text-xl">
-                    <div>
-                        <h1 class="text-5xl font-bold text-white">Hi <span><i
+                class="text-center md:text-left flex flex-col justify-center items-center md:items-start order-2 md:order-1">
+                <div id="My_info" class="md:w-[95%] xl:w-[80%] space-y-5 text-xl ">
+                    <div class="xl:w-full">
+                        <h1 class="text-4xl xl:text-[44px] font-bold text-white">Hi <span><i
                                     class="fa-solid fa-handshake text-yellow-500"></i></span> I'm Samim Reza</h1>
                     </div>
                     <div>
-                        <h1 class="text-gray-300">I am a passionate frontend developer with strong skills in HTML, CSS,
+                        <h1 class="text-gray-300 text-lg lg:text-xl lg:w-[90%] xl:w-full">I am a passionate frontend developer with strong skills in HTML, CSS,
                             and
                             JavaScript. I recently completed my training in Web Design & Development at
                             the Rajshahi City Corporation Employment Skill Development Institute. I also
@@ -120,9 +120,9 @@
                 </div>
 
             </div>
-            <div id="Photo" class="flex justify-center items-center mb-10 sm:mb-0 sm:order-1">
+            <div id="Photo" class="flex justify-center items-center mb-10 md:mb-0 md:order-1">
                 <div id="image"
-                    class="sm:w-[450px] sm:h-[450px] w-80 h-80 relative rounded-full overflow-hidden border-4 border-yellow-500 ">
+                    class="w-80 h-80 xl:w-[450px] xl:h-[450px]  relative rounded-full overflow-hidden border-4 border-yellow-500 ">
                     <img class="absolute" src="../images/samim_coverjpg.jpg" alt="Photo">
                 </div>
 
@@ -132,14 +132,14 @@
 
     </section>
 
-    <section class="w-full text-white text-xl pt-16 sm:pb-20 pb-10 px-2 sm:px-0">
-        <div id="details" class="container mx-auto sm:px-40 space-y-20">
-            <div class="sm:flex flex-row gap-20">
-                <div id="Skills" class="space-y-5 sm:w-1/2">
+    <section class="w-full text-white text-xl pt-16 md:pb-20 pb-10 px-5 md:px-0">
+        <div id="details" class="container mx-auto px-5 lg:px-32 space-y-20">
+            <div class="md:flex flex-row gap-20">
+                <div id="Skills" class="space-y-5 md:w-1/2">
                     <h1
-                        class="text-yellow-500 text-2xl sm:text-3xl font-bold border-b pb-2 border-green-500 rounded-r-xl rounded-l-xl px-2 py-4">
+                        class="text-yellow-500 text-2xl md:text-3xl font-bold border-b pb-2 border-green-500 rounded-r-xl rounded-l-xl px-2 py-4">
                         Skills</h1>
-                    <ul class="flex flex-row gap-20">
+                    <ul class="">
                         <div class="space-y-1">
                             <li><i class="fa-solid fa-circle text-xs pr-3"></i>HTML5</li>
                             <li><i class="fa-solid fa-circle text-xs pr-3"></i>CSS3</li>
@@ -156,9 +156,9 @@
                         </div>
                     </ul>
                 </div>
-                <div id="background" class="sm:w-1/2 space-y-5 pt-10 sm:pt-0">
+                <div id="background" class="md:w-1/2 space-y-5 pt-10 md:pt-0">
                     <h1
-                        class="text-yellow-500 text-2xl sm:text-3xl font-bold border-b pb-2 border-green-500 rounded-r-xl rounded-l-xl px-2 py-4">
+                        class="text-yellow-500 text-2xl md:text-3xl font-bold border-b pb-2 border-green-500 rounded-r-xl rounded-l-xl px-2 py-4">
                         Background</h1>
                     <h1 class="">I am studying Bachelor of Science in Chemistry from National University of Bangladesh.
                         I have
@@ -173,12 +173,12 @@
         </div>
     </section>
 
-    <section class="w-full text-white text-xl sm:pb-20">
-        <div id="details" class="container mx-auto sm:px-40 space-y-20 px-2">
-            <div class="sm:flex flex-row gap-20">
-                <div id="Skills" class="space-y-5 sm:w-1/2">
+    <section class="w-full text-white text-xl md:pb-20">
+        <div id="details" class="container mx-auto lg:px-32 space-y-20 px-5">
+            <div class="md:flex flex-row gap-20">
+                <div id="Skills" class="space-y-5 md:w-1/2">
                     <h1
-                        class="text-yellow-500 text-2xl sm:text-3xl font-bold border-b pb-2 border-green-500 rounded-r-xl rounded-l-xl px-2 py-4">
+                        class="text-yellow-500 text-3xl font-bold border-b pb-2 border-green-500 rounded-r-xl rounded-l-xl px-2 py-4">
                         Remarkable Projects</h1>
                     <ul class="flex flex-row gap-20">
                         <div class="space-y-1">
@@ -202,9 +202,9 @@
 
                     </ul>
                 </div>
-                <div id="background" class="sm:w-1/2 space-y-5 pt-10 sm:pt-0">
+                <div id="background" class="md:w-1/2 space-y-5 pt-10 md:pt-0">
                     <h1
-                        class="text-yellow-500 text-2xl sm:text-3xl font-bold border-b sm:pb-2 border-green-500 rounded-r-xl rounded-l-xl px-2 py-4">
+                        class="text-yellow-500 text-3xl font-bold border-b md:pb-2 border-green-500 rounded-r-xl rounded-l-xl px-2 py-4">
                         Personal Skills</h1>
                     <ul class="space-y-1">
                         <li class="flex "><i class="fa-solid fa-circle text-xs pr-3 mt-2"></i>Excellent in Communication
@@ -226,12 +226,12 @@
     </section>
 
 
-    <section class="w-full text-white text-xl sm:pb-20 pt-10 sm:pt-0 px-2 sm:px-0">
-        <div id="details" class="container mx-auto sm:px-40 space-y-20">
-            <div class="sm:flex flex-row gap-20">
+    <section class="w-full text-white text-xl md:pb-20 pt-10 md:pt-0 px-5 md:px-0">
+        <div id="details" class="container mx-auto lg:px-32 space-y-20 px-5">
+            <div class="md:flex flex-row gap-20">
                 <div id="Skills" class="space-y-5 w-1/2">
                     <h1
-                        class="text-yellow-500 text-2xl sm:text-3xl font-bold border-b pb-2 border-green-500 rounded-r-xl rounded-l-xl px-2 py-4">
+                        class="text-yellow-500 text-3xl font-bold border-b pb-2 border-green-500 rounded-r-xl rounded-l-xl px-2 py-4">
                         Language</h1>
                     <ul class="flex flex-row gap-20">
                         <div class="space-y-1">
@@ -246,9 +246,9 @@
 
                     </ul>
                 </div>
-                <div id="background" class="w-1/2 space-y-5 pt-10 sm:pt-0">
+                <div id="background" class="w-1/2 space-y-5 pt-10 md:pt-0">
                     <h1
-                        class="text-yellow-500 text-2xl sm:text-3xl font-bold border-b pb-2 border-green-500 rounded-r-xl rounded-l-xl px-2 py-4">
+                        class="text-yellow-500 text-3xl font-bold border-b pb-2 border-green-500 rounded-r-xl rounded-l-xl px-2 py-4">
                         Hobbies</h1>
                     <ul class="space-y-1">
                         <li class="flex "><i class="fa-solid fa-circle text-xs pr-3 mt-2"></i>Volunteering</li>
@@ -266,31 +266,31 @@
         </div>
     </section>
 
-    <section id="footer" class="sm:pb-16 pb-10 px-2 sm:px-0 pt-16 sm:pt-0">
+    <section id="footer" class="md:pb-16 pb-10 px-5 lg:px-0 pt-16 md:pt-0 ">
         <footer
-            class="container mx-auto px-5 flex flex-col sm:flex-row items-center justify-between border-b border-t rounded-e-xl rounded-l-xl border-green-500">
+            class="container mx-auto px-5 flex flex-col md:flex-row items-center justify-between border-b border-t rounded-e-xl rounded-l-xl border-green-500">
 
-            <div class="hidden sm:block">
+            <div class="hidden md:block">
                 <a href="#" class="text-black hover:text-white">
-                    <button type="submit" class="bg-yellow-500 shadow shadow-white px-6 
-                            py-2 font-medium rounded-md hover:bg-yellow-600 hover:text-white transition-all">
+                    <button type="submit" class="bg-yellow-500 shadow shadow-white lg:px-6 px-2 py-1
+                            lg:py-2 font-medium rounded-md hover:bg-yellow-600 hover:text-white transition-all">
                         My Portfolio</button></a>
             </div>
 
-            <div class="sm:text-xl text-gray-400">
-                <span><i class="fa-regular fa-copyright"></i></span> <span>2024 - Present samim reza. All rights
+            <div class="lg:text-xl text-gray-400 flex flex-wrap gap-2">
+                <span><i class="fa-regular fa-copyright"></i></span> <span class="">2024 - Present samim reza. All rights
                     reserved.</span>
             </div>
             <div>
                 <div id="social_Icon" class="flex flex-row gap-3  px-3 py-3 ">
                     <a href="https://www.linkedin.com/in/samim-reza99/" target="_blank"
-                        class="bg-yellow-500 hover:bg-green-500 text-white rounded-md px-2 text-base sm:text-2xl">
+                        class="bg-yellow-500 hover:bg-green-500 text-white rounded-md px-2 text-lg lg:text-2xl">
                         <i class="fa-brands fa-linkedin"></i></a>
                     <a href=""
-                        class="bg-yellow-500 hover:bg-green-500 text-white rounded-md px-2 text-base sm:text-2xl">
+                        class="bg-yellow-500 hover:bg-green-500 text-white rounded-md px-2 text-lg lg:text-2xl">
                         <i class="fa-brands fa-facebook"></i></a>
                     <a href=""
-                        class="bg-yellow-500 hover:bg-green-500 text-white rounded-md px-2 text-base sm:text-2xl">
+                        class="bg-yellow-500 hover:bg-green-500 text-white rounded-md px-2 text-lg lg:text-2xl">
                         <i class="fa-brands fa-instagram"></i></a>
 
                 </div>
