--- a/src/index.html
+++ b/src/index.html
@@ -84,11 +84,19 @@
                         <span class="text-yellow-500 font-medium">CSS,</span> and
                         <span class="text-yellow-500 font-medium">JavaScript.</span>
                     </h2>
-                    <div class="text-xl ">
-                        <a href="./about.html" target="_blank"><button type="submit" class="bg-yellow-500 shadow shadow-white px-6 
-                        py-2 font-medium rounded-md hover:bg-yellow-600 hover:text-white transition-all"> About me
-                            </button></a>
-
+                    <div class="flex flex-wrap flex-row gap-7">
+                        <div class="text-xl ">
+                            <a href="./about.html" target="_blank"><button type="submit" class="bg-yellow-500 shadow shadow-white px-6 
+                            py-2 font-medium rounded-md hover:bg-green-600 hover:text-white transition-all"> About me
+                                </button></a>
+    
+                        </div>
+                        <div class="text-xl ">
+                            <a href="../docs/Samim Reza Web Developer.pdf" title="Samim Reza's CV" download="Samim Reza Web Developer" target="_blank"><button type="submit" class="bg-yellow-500 shadow shadow-white px-6 
+                            py-2 font-medium rounded-md hover:bg-green-600 hover:text-white transition-all">Download CV
+                                </button></a>
+    
+                        </div>
                     </div>
 
 
