--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Samim Reza - Web Designer & Developer</title>
-    <link rel="shortcut icon" href="../images/Portfolio_logo.PNG" type="image/x-icon">
+    <link rel="shortcut icon" href="../src/public/images/Portfolio_logo.PNG" type="image/x-icon">
 
     <link href="./output.css" rel="stylesheet">
     <link rel="stylesheet" href="../src/public/assets/fontawesome/css/all.min.css">
@@ -92,7 +92,7 @@
     
                         </div>
                         <div class="text-xl ">
-                            <a href="../docs/Samim Reza Web Developer.pdf" title="Samim Reza's CV" download="Samim Reza Web Developer" target="_blank"><button type="submit" class="bg-yellow-500 shadow shadow-white px-6 
+                            <a href="../src/public/docs/Samim Reza Web Developer.pdf" title="Samim Reza's CV" download="Samim Reza Web Developer" target="_blank"><button type="submit" class="bg-yellow-500 shadow shadow-white px-6 
                             py-2 font-medium rounded-md hover:bg-green-600 hover:text-white transition-all">Download CV
                                 </button></a>
     
