--- a/src/about.html
+++ b/src/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Samim Reza - Web Designer & Developer</title>
-    <link rel="shortcut icon" href="../images/Portfolio_logo.PNG" type="image/x-icon">
+    <link rel="shortcut icon" href="../src/public/images/Portfolio_logo.PNG" type="image/x-icon">
 
     <link href="./output.css" rel="stylesheet">
     <link rel="stylesheet" href="../src/public/assets/fontawesome/css/all.min.css">
@@ -44,9 +44,9 @@
                                     <button type="submit" class="bg-yellow-500 shadow shadow-white lg:px-6 px-6
                             py-2 font-medium rounded-md hover:bg-yellow-600 hover:text-white transition-all"> Portfolio
                                     </button></a></li>
-                            <li><a href="#" class="text-black hover:text-white">
+                            <li><a href="./portfolio.html" class="text-black hover:text-white">
                                     <button type="submit" class="bg-yellow-500 shadow shadow-white lg:px-6 px-7
-                            py-2 font-medium rounded-md hover:bg-yellow-600 hover:text-white transition-all"> Contact
+                            py-2 font-medium rounded-md hover:bg-yellow-600 hover:text-white transition-all"> Projects
                                     </button></a></li>
                         </ul>
                     </div>
