--- a/src/index.html
+++ b/src/index.html
@@ -40,9 +40,9 @@
                             <button type="submit" class="bg-yellow-500 shadow shadow-white lg:px-6 px-6
                         py-2 font-medium rounded-md hover:bg-yellow-600 hover:text-white transition-all"> Portfolio
                             </button></a></li>
-                    <li><a href="#" class="text-black hover:text-white">
+                    <li><a href="./portfolio.html" class="text-black hover:text-white">
                             <button type="submit" class="bg-yellow-500 shadow shadow-white lg:px-6 px-7
-                        py-2 font-medium rounded-md hover:bg-yellow-600 hover:text-white transition-all"> Contact
+                        py-2 font-medium rounded-md hover:bg-yellow-600 hover:text-white transition-all"> Project
                             </button></a></li>
                 </ul>
                 <div id="social_Icon"
