--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
                         <span class="text-yellow-500 font-medium">CSS,</span> and
                         <span class="text-yellow-500 font-medium">JavaScript.</span>
                     </h2>
-                    <div class="flex flex-wrap flex-row gap-7">
+                    <div class="flex flex-wrap flex-row gap-7 justify-center sm:justify-start">
                         <div class="text-xl ">
                             <a href="./about.html" target="_blank"><button type="submit" class="bg-yellow-500 shadow shadow-white px-6 
                             py-2 font-medium rounded-md hover:bg-green-600 hover:text-white transition-all"> About me
